# firminia3

./: .gitignore  CHANGELOG.md  CHANGELOG_LOCALIZATION.md  CHANGELOG_ROLLBACK.md  CMakeLists.txt  GITHUB_OTA_GUIDE.md  LANGUAGE_SUPPORT.md  LICENSE.md  OTA_SECURE_BOOT_GUIDE.md  PARTIAL_UPDATE_JSON_GUIDE.md  README.md  ROLLBACK_IMPLEMENTATION_SUMMARY.md  ROLLBACK_SYSTEM_DOCUMENTATION.md  ROLLBACK_SYSTEM_GUIDE.md  ROLLBACK_TEST_INSTRUCTIONS.md  TEST_ROLLBACK_README.md  WATCHDOG_TEST_REMOVAL_SUMMARY.md  example_config.json  example_partial_config.json  idf_component.yml  partitions.csv  quick_test_example.c  sdkconfig  sdkconfig.old  test_rollback.ps1  test_rollback_config.h  test_translations.c
main/: CMakeLists.txt  QR_CONVERSION_GUIDE.md  api_manager.c  api_manager.h  ble_manager.c  ble_manager.h  config.c  device_config.c  device_config.h  display_manager.c  display_manager.h  global_vars.h  main.c  main_flow.c  ota_integration_example.c  ota_manager.c  ota_manager.h  qr_image.c  qr_image.h  translations.c  translations.h  wifi_manager.c  wifi_manager.h
main/images/: electronic-diagram.psd
support-data/3D print files/: FirminiaV3.3mf
